--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@drawable/ic_bg"
+    android:background="@drawable/indianbackground"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
