--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,6 +10,18 @@
     android:padding="20dp"
     tools:context=".ResultActivity">
 
+    <nl.dionsegijn.konfetti.KonfettiView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/viewKonfetti"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        >
+    </nl.dionsegijn.konfetti.KonfettiView>
+
     <TextView
         android:id="@+id/tv_result"
         android:layout_width="wrap_content"
